--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Inkludes 2020</title>
 </head>
 <body>
-<div class="menu">
+<div class="izvele">
   <img src="https://jauns.lv/images/logo/jauns_lv.png" alt="" width="200px">
-<div class="mainmenu">
+<div class="main">
   <ul>
     <li class="main_menu_item">Ziņas</li>
     <li class="main_menu_item">Ārzemēs</li>
@@ -22,111 +22,7 @@
     <li class="main_menu_item">Māja</li>
   </ul>
 </div>
-<div class="second">
-  <ul class="second_menu">
-    <li class="second_menu_item">Aktuāli</li>
-    <li class="second_menu_item">Koronavīruss</li>
-    <li class="second_menu_item">Radi. Dari. Dalies</li>
-    <li class="second_menu_item">Vēlēšanas Rīgā</li>
-    <li class="second_menu_item">Laika ziņas</li>
-    <li class="second_menu_item">Zaļās dzīves</li>
-    <li class="second_menu_item">ABC Olimpiskās spēles</li>
-    <li class="second_menu_item">Rīga Jūrmala</li>
-    <li class="second_menu_item">Labs kino</li>
-  </ul>
-</div>
 </div>
 <div class="saturs">
-  <div class="temas_tops" style="display:none;">
-    <div style="position: relative; height: 100px; padding: 75px 0 0 25px;" class="radidaridalies">
-      <div style="font-size: 30px;clear: right;float: left;border-bottom: 2px solid grey;padding: 0px 10px;margin: 10px;width: 300px;text-align: left;" id=uzruna> Dari.Radi.Dalies.</div>
-      <div style="float: left;clear: both;padding-left: 19px;" id=logo>
-          <img src="https://jauns.lv/images/logo/jauns_lv.png" alt="" width="110px">
-      </div>
-      <div style="float: left; font-size: 20px; padding-left: 15px;">Atbalsts darītājiem!</div>
-    </div>
-</div>
-  <div class="uzruna">
-    <img width="100%" height="100%" src="https://images.pexels.com/photos/1029624/pexels-photo-1029624.jpeg" style="opacity: 0.4;">
-    <div class="uzruna_items">
-        <div id="uzruna2">Dari. Radi. Dalies!</div>
-        <div id="uzruna3">Piedāvājam iespēju aktīviem uzņēmējiem un vienkārši uzņēmīgiem cilvēkiem bez maksas ievietot informāciju par iespējām un piedāvājumiem, kas radīti krīzes apstākļos.</div></div>
-        <div class="box">
-        	<a class="button" href="#popup1"><div class="Pievienot">
-          <div id="poga"><span id="pluss" >+</span></div> <span id="pievienot_teksts">Pievienot piedāvājumu</span>
-        </div></a>
-        </div></div>
-    <div class="elements_item">
-  <div class="picture"><img width="100%" height="100%" src="https://i.jauns.lv/t/2020/03/30/1928833/950x0.jpg?v=1585559139" class="attachment-full size-full" alt=""></div>
-  <div class="element_info">
-  <div id="aksesuari" class="kategorija">#aksesuāri </div>
-  <div class="virsraksts"> Latvijas josta</div>
-  <div class="pavadteksts">Latvijā ražotas ādas jostas ar apdruku!</div>
-  <div class="poga">Uzzināt vairāk</div></div></div>
-    <div class="elements_item">
-      <div class="picture"><img width="100%" height="100%" src="https://i.jauns.lv/t/2019/10/25/1822399/1000x620.jpg?v=1572022747" class="attachment-full size-full" alt=""></div><div class="element_info">
-    <div class="element_kategorija"> #Kategorija  </div>
-    <div class="virsraksts">  Virsraksts</div>
-    <div class="pavadteksts">shis ir pavadteksts ierobežotu simbolu ziņā un skaitā.</div>
-    <div class="poga">Pirkt!</div></div></div>
-    <div class="elements_item">
-    <div class="picture"><img width="100%" height="100%" src="https://i.jauns.lv/t/2020/04/01/1930009/1000x620.jpg?v=1585744155" class="attachment-full size-full" alt=""></div>
-    <div class="element_info">
-    <div class="element_kategorija"> #Kategorija  </div>
-    <div class="virsraksts">  Virsraksts</div>
-    <div class="pavadteksts">shis ir pavadteksts ierobežotu simbolu ziņā un skaitā.</div>
-    <div class="poga">Pasūtīt</div></div></div>
-<div class="elements_item">
-      <div class="picture"><img width="100%" height="100%" src="https://i.jauns.lv/o/2019/12/11/1856341.jpg" class="attachment-full size-full" alt=""></div><div class="element_info">
-      <div class="element_kategorija"> #Kategorija  </div>
-      <div class="virsraksts">  Virsraksts</div>
-      <div class="pavadteksts">shis ir pavadteksts ierobežotu simbolu ziņā un skaitā.</div>
-      <div class="poga">Iegādāties</div></div></div>
-<div class="elements_item">
-      <div class="picture"><img width="100%" height="100%" src="https://i.jauns.lv/t/2020/04/01/1930068/1000x620.jpg?v=1585748842" class="attachment-full size-full" alt=""></div><div class="element_info">
-      <div class="element_kategorija"> #Kategorija  </div>
-      <div class="virsraksts">  Virsraksts</div>
-      <div class="pavadteksts">shis ir pavadteksts ierobežotu simbolu ziņā un skaitā.</div>
-      <div class="poga">Apskatīt!</div></div></div>
-    <div class="elements_item">
-      <div class="picture"><img width="100%" height="100%" src="https://i.jauns.lv/t/2020/03/30/1928830/950x0.jpg?v=1585564175" class="attachment-full size-full" alt=""></div><div class="element_info">
-      <div class="element_kategorija"> #Kategorija  </div>
-      <div class="virsraksts">  Virsraksts</div>
-      <div class="pavadteksts">shis ir pavadteksts ierobežotu simbolu ziņā un skaitā.</div>
-      <div class="poga">Sazināties</div></div></div>
-    <div class="elements_item">
-        <div class="picture"><img width="100%" height="100%" src="https://i.jauns.lv/t/2020/04/01/1929856/950x0.jpg?v=1585727646" class="attachment-full size-full" alt=""></div><div class="element_info">
-        <div class="element_kategorija"> #Kategorija  </div>
-        <div class="virsraksts">  Virsraksts</div>
-        <div class="pavadteksts">shis ir pavadteksts ierobežotu simbolu ziņā un skaitā.</div>
-        <div class="poga">Pirkt!</div></div></div>
-    <div class="elements_item">
-      <div class="picture"><img width="100%" height="100%" src="https://i.jauns.lv/t/2020/04/01/1929811/1000x620.jpg?v=1585721002" class="attachment-full size-full" alt=""></div><div class="element_info">
-        <div class="element_kategorija"> #Kategorija  </div>
-        <div class="virsraksts">  Virsraksts</div>
-        <div class="pavadteksts">shis ir pavadteksts ierobežotu simbolu ziņā un skaitā.</div>
-        <div class="poga">Iegādāties</div></div></div>
-</div>
-</div>
-<div class="pogtests">
-<div id="popup1" class="overlay">
-	<div class="popup">
-		<h2>Pievieno savu piedāvājumu</h2>
-		<a class="close" href="#">&times;</a>
-		<div class="content">
-			<label for="">Nosaukums</label>
-      <input type="text" name="" value=""><br>
-      <label for="">Apraksts</label>
-      <input type="text" name="" value=""><br>
-      <label for="">Saite uz piedāvājumu</label>
-      <input type="image" name="" value="">
-      <input type="text" name="" value=""><br>
-    <input type="checkbox" name="" value="">            <label for="">Es maksāšu</label><br>
-        <input type="checkbox" name="" value="">            <label for="">Es pilngadīgs</label><br>
-            <input type="checkbox" name="" value="">            <label for="">Es zinu ko daru</label><br>
-            <button type="button" name="button">Pievienot</button>
-		</div>
-	</div>
-</div>
 </div>
 </body>
