--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="izvele">
-  <img src="https://jauns.lv/images/logo/jauns_lv.png" alt="" width="200px">
+  <img src="https://jauns.lv/images/sprite.svg#logo-pastaiga" alt="" width="200px">
 <div class="main">
   <ul>
     <li class="main_menu_item">Ziņas</li>
