--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inkludes 2020</title>
+  <title>PAstaiga - Look of the day</title>
 </head>
 <body>
 <div class="izvele">
