--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
 <body>
 <div class="izvele">
   <img src="https://jauns.lv/images/sprite.svg#logo-pastaiga" alt="" width="200px">
-<div class="main">
+<div class="main_menu">
   <ul>
-    <li class="main_menu_item">Ziņas</li>
-    <li class="main_menu_item">Ārzemēs</li>
-    <li class="main_menu_item">Sports</li>
-    <li class="main_menu_item">9vīri</li>
-    <li class="main_menu_item">Bizness</li>
-    <li class="main_menu_item">Izklaide</li>
-    <li class="main_menu_item">Sievietēm</li>
-    <li class="main_menu_item">Pastaiga</li>
-    <li class="main_menu_item">Par veselību</li>
-    <li class="main_menu_item">Receptes</li>
-    <li class="main_menu_item">Māja</li>
+    <li class="main_menu_item">Cilvēki</li>
+    <li class="main_menu_item">Mode</li>
+    <li class="main_menu_item">Dzīvesstils</li>
+    <li class="main_menu_item">Skaistums</li>
+    <li class="main_menu_item">Topi</li>
+    <li class="main_menu_item">Blogs</li>
+    <li class="main_menu_item">Look of the Day</li>
   </ul>
 </div>
 </div>
