--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 </div>
 </div>
 <div class="saturs">
+  <div class="sleja">
+
+  </div>
   <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
+  <div class="sidebar">
+    <div class="reklama-side">
+    </div>
+  </div>
 </div>
 </body>
