--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
 </div>
 <div class="saturs">
   <div class="sleja">
-
+    <div class="Raksta_virsraksts">
+    <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
+    </div>
+    <div class="raksta saturs">
+      raksta saturs
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
+    </div>
+    <div class="raksta-sidebar">
+      raksta sidebar
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
+    </div>
   </div>
   <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
   <div class="sidebar">
