--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="Raksta_virsraksts">
     <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
     </div>
-    <div class="raksta saturs">
+    <div class="raksta_saturs">
       raksta saturs
       <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
     </div>
-    <div class="raksta-sidebar">
+    <div class="raksta_sidebar">
       raksta sidebar
       <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
     </div>
