--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <div class="saturs">
   <div class="sleja">
-    <div class="Raksta_virsraksts">
+    <div class="raksta_virsraksts">
     <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
     </div>
     <div class="raksta_saturs">
