--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Pastaiga - Look of the day</title>
 </head>
 <body>
-<div class="izvele">
+<div class="izvelne">
   <img src="https://jauns.lv/images/sprite.svg#logo-pastaiga" alt="" width="200px">
 <div class="main_menu">
   <ul>
