--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 <div class="saturs">
   <div class="sleja">
     <div class="raksta_virsraksts">
-    <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
+    <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
     </div>
     <div class="raksta_saturs">
       raksta saturs
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
     </div>
     <div class="raksta_sidebar">
       raksta sidebar
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
+    <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
     </div>
   </div>
-  <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="">
+<img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
   <div class="sidebar">
     <div class="reklama-side">
     </div>
