--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pastaiga - Look of the day</title>
 </head>
-<body><div id="header"
+<body><div id="header">
 <div class="izvelne">
   <img src="https://jauns.lv/images/sprite.svg#logo-pastaiga" alt="" width="200px">
 <div class="main_menu">
