--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body><div id="header">
 <div class="izvelne">
-  <img src="https://jauns.lv/images/sprite.svg#logo-pastaiga" alt="" width="200px">
+  <img src="https://jauns.lv/images/logo/Pastaiga_logo.png" alt="" width="200px">
 <div class="main_menu">
   <ul>
     <li class="main_menu_item">Cilvēki</li>
