--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body><div id="header">
 <div class="izvelne">
-  <img class="logo" src="https://jauns.lv/images/logo/Pastaiga_logo.png" alt="" width="200px">
+  <img class="logo" src="https://www.rigasvilni.lv/assets/images/logos/pastaiga/Pastaiga_LV_logo_melns_500px_2019.png" alt="" width="200px">
 <div class="main_menu">
   <ul>
     <li class="main_menu_item">Cilvēki</li>
