--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <div class="saturs">
   <div class="sleja">
     <div class="raksta_virsraksts">
-    <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
+    <img src="image/image3.jpeg" alt="" style=" width: 100%; ">
     </div>
     <div class="raksta_saturs">
       raksta saturs
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
+<img src="image/image0.jpeg" alt="" style=" width: 100%; ">
     </div>
     <div class="raksta_sidebar">
       raksta sidebar
