--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 <div class="saturs">
   <div class="sleja">
     <div class="raksta_virsraksts">
-    <img src="image/image1.jpeg" alt="" style=" width: 100%; ">
+    <div id="coverimage>"<img src="image/image1.jpeg" alt="" style=" width: 100%; "></div>
+    <div class="virsraksts">
+<h1>Look of the day by Zara </h1>
+    </div>
+    <div class="ievads">
+      <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
+    </div>
     </div>
     <div class="raksta_saturs">
       raksta saturs
