--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
     </div>
     </div>
     <div class="raksta_saturs">
-      raksta saturs
+      <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
 <img src="image/image0.jpeg" alt="" style=" width: 100%; ">
     </div>
     <div class="raksta_sidebar">
-      raksta sidebar
-    <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
+    <div class="ad">
+      <p>Reklāma</p>
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
+    </div>
     </div>
   </div>
   <div class="sidebar">
