--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="saturs">
   <div class="sleja">
     <div class="raksta_virsraksts">
-    <div id="coverimage>"<img src="image/image1.jpeg" alt="" style=" width: 100%; "></div>
+    <div id="coverimage>"<img src="image/image1.jpeg"></div>
     <div class="virsraksts">
 <h1>Look of the day by Zara </h1>
     </div>
