--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="raksta_saturs">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
-<img src="image/image0.jpeg" alt="" style=" width: 100%; ">
+<img src="image/image0.jpeg" alt="" width="100%" height="100%">
     </div>
     <div class="raksta_sidebar">
     <div class="ad">
