--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <div class="raksta_sidebar">
     <div class="ad">
       <p>Reklāma</p>
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" width="100%" height="100%>
     </div>
     </div>
   </div>
   <div class="sidebar">
     <div class="reklama-side">
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" style=" width: 100%; ">
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" width="100%" height="100%">
     </div>
   </div>
 </div>
