--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="saturs">
   <div class="sleja">
     <div class="raksta_virsraksts">
-    <div id="coverimage"><img src="image/image0.jpeg" style="max-width: 100%;"></div>
+    <div id="coverimage"><img src="image/image0.jpeg" style="width: 100%; height: 340px;"></div>
     <div class="virsraksts">
 <h1>Look of the day by Zara </h1>
     </div>
@@ -33,18 +33,18 @@
     </div>
     <div class="raksta_saturs">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
-<img src="image/image0.jpeg" alt="" width="100%" height="100%">
+<img src="image/image0.jpeg" style="width: 100%; height: 340px;">
     </div>
     <div class="raksta_sidebar">
     <div class="ad">
       <p>Reklāma</p>
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" width="100%" height="100%>
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 340px;">
     </div>
     </div>
   </div>
   <div class="sidebar">
     <div class="reklama-side">
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" alt="" width="100%" height="100%">
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 340px;">
     </div>
   </div>
 </div>
