--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <div class="sleja">
     <div class="raksta_virsraksts">
     <div id="coverimage"><img src="image/image0.jpeg" style="width: 100%; height: 340px;"></div>
-    <div class="virsraksts">
+<div id="header">    <div class="virsraksts">
 <h1>Look of the day by Zara </h1>
     </div>
     <div class="ievads">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
-    </div>
+    </div></div>
     </div>
     <div class="raksta_saturs">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
