--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="ievads">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
-    </div></div>
+    </div></div></div>
     </div>
     <div class="raksta_saturs">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
