--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="sleja">
     <div class="raksta_virsraksts">
     <div id="coverimage"><img src="image/image0.jpeg" style="width: 100%; height: 340px;"></div>
-<div id="header">    <div class="virsraksts">
+<div id="titulvirsraksts">    <div class="virsraksts">
 <h1>Look of the day by Zara </h1>
     </div>
     <div class="ievads">
