--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <div class="ievads">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
     </div></div></div>
-    </div>
     <div class="raksta_saturs">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
 <img src="image/image0.jpeg" style="width: 100%; height: 340px;">
@@ -40,11 +39,10 @@
       <p>Reklāma</p>
       <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 340px;">
     </div>
-    </div>
+    </div></div>
   <div class="sidebar">
     <div class="reklama-side">
       <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 340px;">
     </div>
   </div>
-</div>
 </body>
