--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
     <div class="raksta_saturs">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
 <img src="image/image0.jpeg" style="width: 100%; height: 800px;">
+<div class="produkts">
+  <img src="image/image0.jpeg" style="width: 100%; height: 200px;">
+  <h2>Bikses</h2>
+  <div class="cena"><span class="vērtība">3.99Eiro</span>
+    <div class="pirkt">
+      <p>Pirkt</p>
+    </div>
+  </div>
+</div>
     </div>
     <div class="raksta_sidebar">
     <div class="ad">
