--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
     </div>
   </div>
 </div>
+<div class="produkts">
+  <img src="image/image0.jpeg" style="width: 100%; height: 200px;">
+  <h2>Bikses</h2>
+  <div class="cena"><span class="vērtība">3.99Eiro</span>
+    <div class="pirkt">
+      <p>Pirkt</p>
+    </div>
+  </div>
+</div>
+<div class="produkts">
+  <img src="image/image0.jpeg" style="width: 100%; height: 200px;">
+  <h2>Bikses</h2>
+  <div class="cena"><span class="vērtība">3.99Eiro</span>
+    <div class="pirkt">
+      <p>Pirkt</p>
+    </div>
+  </div>
+</div>
     </div>
     <div class="raksta_sidebar">
     <div class="ad">
