--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <img src="image/image0.jpeg" style="width: 100%; height: 200px;">
   <h2>Bikses</h2>
   <div class="cena"><span class="vērtība">3.99Eiro</span>
-    <div class="pirkt">
+    <div class="poga">
       <p>Pirkt</p>
     </div>
   </div>
