--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="produkts">
   <img src="image/image0.jpeg" style="width: 100%; height: 200px;">
   <h2>Bikses</h2>
-  <div class="cena"><span class="vērtība">3.99Eiro</span>
+  <div class="cena"><span class="vērtība">51.99Eiro</span>
     <div class="pirkt">
       <p>Pirkt</p>
     </div>
@@ -44,8 +44,8 @@
 </div>
 <div class="produkts">
   <img src="image/image0.jpeg" style="width: 100%; height: 200px;">
-  <h2>Bikses</h2>
-  <div class="cena"><span class="vērtība">3.99Eiro</span>
+  <h2>Josta</h2>
+  <div class="cena"><span class="vērtība">25.99Eiro</span>
     <div class="pirkt">
       <p>Pirkt</p>
     </div>
@@ -53,8 +53,8 @@
 </div>
 <div class="produkts">
   <img src="image/image0.jpeg" style="width: 100%; height: 200px;">
-  <h2>Bikses</h2>
-  <div class="cena"><span class="vērtība">3.99Eiro</span>
+  <h2>Žakete</h2>
+  <div class="cena"><span class="vērtība">49.99Eiro</span>
     <div class="poga">
       <p>Pirkt</p>
     </div>
