--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <img src="image/image0.jpeg" style="width: 100%; height: 200px;">
   <h2>Bikses</h2>
   <div class="cena"><span class="vērtība">51.99Eiro</span>
-    <div class="pirkt">
+    <div class="poga">
       <p>Pirkt</p>
     </div>
   </div>
@@ -46,7 +46,7 @@
   <img src="image/image0.jpeg" style="width: 100%; height: 200px;">
   <h2>Josta</h2>
   <div class="cena"><span class="vērtība">25.99Eiro</span>
-    <div class="pirkt">
+    <div class="poga">
       <p>Pirkt</p>
     </div>
   </div>
