--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <h2>Bikses</h2>
   <div class="cena"><span class="vērtība">51.99Eiro</span>
     <div class="poga">
-      <p>Iegādāties</p>
+      <span>Apskatīt</span>
     </div>
   </div>
 </div>
@@ -47,7 +47,7 @@
   <h2>Josta</h2>
   <div class="cena"><span class="vērtība">25.99Eiro</span>
     <div class="poga">
-      <p>Pirkt</p>
+      <span>Apskatīt</span>
     </div>
   </div>
 </div>
@@ -56,7 +56,7 @@
   <h2>Žakete</h2>
   <div class="cena"><span class="vērtība">49.99Eiro</span>
     <div class="poga">
-      <p>Apskatīt</p>
+      <span>Apskatīt</span>
     </div>
   </div>
 </div>
