--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div><img src="image/image2.jpeg" style="width: 100%;height: 460px;"></div>
 <div id="titulvirsraksts">    <div class="virsraksts">
 <h1>Look of the day by Zara </h1>
-</div><div class="autors"><span class="tēma">Dzīvesstils</span><span>Datums</span><span>Autora vārds un uzvārds</span>
+</div><div class="autors"><span id="topic">Dzīvesstils</span><span id="date">Datums</span><span id="author">Autora vārds un uzvārds</span>
 </div>
     <div class="ievads">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
