--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class="raksta_sidebar">
     <div class="ad">
-      <p>Reklāma</p>
+      <span id="popular">POPULĀRĀKAIS ŠODIEN</span>
       <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 340px;">
     </div>
     </div></div>
