--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
 </div>
     </div>
     <div class="raksta_sidebar">
-    <div class="ad">
-      <span id="popular">POPULĀRĀKAIS ŠODIEN</span>
+            <span id="popular">POPULĀRĀKAIS ŠODIEN</span>
+    <div class="cits raksts">
       <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 340px;">
+      <span class="small-virsraksts">Virsraksts</span>
     </div>
+
     </div></div>
   <div class="sidebar">
     <div class="reklama-side">
