--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div></div>
   <div class="sidebar">
     <div class="reklama-side">
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 850px;">
+      <img src="image/7170737605534669968.jpg" style="width: 100%">
     </div>
   </div>
 </body>
