--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     </div></div>
   <div class="sidebar">
-    <div class="reklama-side">
+    <div class="reklama_side">
       <img src="image/7170737605534669968.jpg" style="width: 100%">
     </div>
   </div>
