--- a/index.html
+++ b/index.html
@@ -68,7 +68,26 @@
       <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
       <span class="small-virsraksts">Virsraksts</span>
     </div>
-
+    <div class="cits raksts">
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
+      <span class="small-virsraksts">Virsraksts</span>
+    </div>
+    <div class="cits raksts">
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
+      <span class="small-virsraksts">Virsraksts</span>
+    </div>
+    <div class="cits raksts">
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
+      <span class="small-virsraksts">Virsraksts</span>
+    </div>
+    <div class="cits raksts">
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
+      <span class="small-virsraksts">Virsraksts</span>
+    </div>
+    <div class="cits raksts">
+      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
+      <span class="small-virsraksts">Virsraksts</span>
+    </div>        
     </div></div>
   <div class="sidebar">
     <div class="reklama_side">
