--- a/index.html
+++ b/index.html
@@ -63,23 +63,23 @@
 </div>
     </div>
     <div class="raksta_sidebar">
-            <span id="popular">POPULĀRĀKAIS ŠODIEN</span>
+            <span id="popular">Saistītie raksti</span>
     <div class="cits raksts">
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
-      <span class="small-virsraksts">Virsraksts</span>
+      <img src="image/sr.jpg" style="width: 100%; height: 200px;">
+      <span class="small-virsraksts">Saistītais raksts 1</span>
     </div>
     <div class="cits raksts">
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
-      <span class="small-virsraksts">Virsraksts</span>
+      <img src="image/sr.jpg" style="width: 100%; height: 200px;">
+      <span class="small-virsraksts">Saistītais raksts 2</span>
     </div>
     <div class="cits raksts">
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
-      <span class="small-virsraksts">Virsraksts</span>
+      <img src="image/sr.jpg" style="width: 100%; height: 200px;">
+      <span class="small-virsraksts">Saistītais raksts 3</span>
     </div>
     <div class="cits raksts">
-      <img src="https://i.jauns.lv/t/2020/04/07/1933229/1000x620.jpg" style="width: 100%; height: 200px;">
-      <span class="small-virsraksts">Virsraksts</span>
-    </div>      
+      <img src="image/sr.jpg" style="width: 100%; height: 200px;">
+      <span class="small-virsraksts">Saistītais raksts 4</span>
+    </div>
     </div></div>
   <div class="sidebar">
     <div class="reklama_side">
