--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
     <div class="raksta_sidebar">
             <span id="popular">Saistītie raksti</span>
     <div class="cits raksts">
-      <img src="image/sr.jpg" style="width: 100%; height: 200px;">
+      <img src="image/sr.jpg">
       <span class="small-virsraksts">Saistītais raksts 1</span>
     </div>
     <div class="cits raksts">
-      <img src="image/sr.jpg" style="width: 100%; height: 200px;">
+      <img src="image/sr.jpg">
       <span class="small-virsraksts">Saistītais raksts 2</span>
     </div>
     <div class="cits raksts">
-      <img src="image/sr.jpg" style="width: 100%; height: 200px;">
+      <img src="image/sr.jpg">
       <span class="small-virsraksts">Saistītais raksts 3</span>
     </div>
     <div class="cits raksts">
-      <img src="image/sr.jpg" style="width: 100%; height: 200px;">
+      <img src="image/sr.jpg">
       <span class="small-virsraksts">Saistītais raksts 4</span>
     </div>
     </div></div>
