--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="saturs">
   <div class="sleja">
     <div class="raksta_virsraksts">
-    <div class="bildes"><img src="image/image2.jpeg" style="width: 100%;height: 460px;">
+    <div class="bilde"><img src="image/image2.jpeg" style="width: 100%;height: 460px;">
 <div id="titulvirsraksts">    <div class="virsraksts">
 <h1>Look of the day by Zara </h1>
 </div><div class="autors"><span id="topic">Dzīvesstils</span><span id="date">09/03/2020</span><span id="author">Autors</span>
