--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pastaiga - Look of the day</title>
 </head>
-<body><div id="header">
+<body>
+  <div id="header">
 <div class="izvelne">
   <img id="logo" src="https://www.rigasvilni.lv/assets/images/logos/pastaiga/Pastaiga_LV_logo_melns_500px_2019.png" alt="" width="200px">
 <div class="main_menu">
@@ -23,7 +24,7 @@
 <div class="saturs">
   <div class="sleja">
     <div class="raksta_virsraksts">
-    <div class="bilde"><img src="image/image2.jpeg" style="width: 100%;height: 460px;">
+    <div class="bilde"><img src="image/image2.jpeg>
 <div id="titulvirsraksts">    <div class="virsraksts">
 <h1>Look of the day by Zara </h1>
 </div><div class="autors"><span id="topic">Dzīvesstils</span><span id="date">09/03/2020</span><span id="author">Autors</span>
