--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="saturs">
   <div class="sleja">
     <div class="raksta_virsraksts">
-    <div class="bilde"><img src="image/image2.jpeg>
+    <div class="bilde"><img src="image/image2.jpeg">
 <div id="titulvirsraksts">    <div class="virsraksts">
 <h1>Look of the day by Zara </h1>
 </div><div class="autors"><span id="topic">Dzīvesstils</span><span id="date">09/03/2020</span><span id="author">Autors</span>
