--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 <div class="saturs">
   <div class="sleja">
     <div class="raksta_virsraksts">
-    <div class="bilde"><img src="image/image2.jpeg">
+    <div class="bilde"><img src="image/image2.jpeg"></div>
 <div id="titulvirsraksts">    <div class="virsraksts">
 <h1>Look of the day by Zara </h1>
 </div><div class="autors"><span id="topic">Dzīvesstils</span><span id="date">09/03/2020</span><span id="author">Autors</span>
 </div>
     <div class="ievads">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
-    </div></div></div></div>
+    </div></div></div>
     <div class="raksta_saturs">
       <p>Over size stila žaketes joprojām turas tendenču augšgalā. Kombinējot ar platām biksēm un papildinajot ar kovboju zābakiem, var panākt brīvu sajūtu, kas ir ļoti aktuāli mūsdiienu stilam</p>
 <img src="image/image0.jpeg" style="width: 100%; height: 800px;">
